# goxlr-playground

./: .gitignore  Cargo.toml  README.md  prototype.md
goxlr-cli/src/: cli.rs  main.rs
goxlr-cli/src/processors/: channel.rs  microphone.rs  mod.rs  pages.rs
goxlr-client/: Cargo.toml
goxlr-client/src/: cli.rs  main.rs
goxlr-client/src/processors/: channel.rs  microphone.rs  pages.rs
goxlr-daemon/: Cargo.toml  build.rs
goxlr-daemon/src/: main.rs  primary_worker.rs  stop.rs
goxlr-daemon/src/device/: device.rs  device_manager.rs  messaging.rs  mod.rs  packet.rs
goxlr-daemon/src/device/goxlr/: device.rs  device_config.rs  goxlr.rs  mod.rs
goxlr-daemon/src/device/goxlr/components/: buttons.rs  channel.rs  fader.rs  interactions.rs  load_profile.rs  mod.rs  mute_handler.rs  pages.rs  profile.rs  routing_handler.rs  submix.rs
goxlr-daemon/src/device/goxlr/components/mic/: compressor.rs  eq.rs  gate.rs  load_profile.rs  mic_eq.rs  mic_type.rs  mod.rs
goxlr-daemon/src/device/goxlr/ipc/: channels.rs  configuration.rs  handler.rs  microphone.rs  mod.rs  pages.rs
goxlr-daemon/src/device/goxlr/ipc/microphone/: compressor.rs  equaliser.rs  gate.rs  mod.rs  setup.rs
goxlr-daemon/src/device/goxlr/parts/: buttons.rs  fader.rs  interactions.rs  load_profile.rs  mod.rs  mute_handler.rs  pages.rs  profile.rs  routing_handler.rs
goxlr-daemon/src/platform/: linux.rs  mod.rs  windows.rs
goxlr-daemon/src/servers/: http_server.rs  ipc_server.rs  mod.rs
goxlr-ipc/: Cargo.toml  README.md
goxlr-ipc/src/: client.rs  lib.rs
goxlr-ipc/src/clients/ipc/: ipc_client.rs
goxlr-ipc/src/clients/web/: web_client.rs
goxlr-ipc/src/commands/: channels.rs  configuration.rs  mod.rs  pages.rs
goxlr-ipc/src/commands/mic/: compressor.rs  equaliser.rs  gate.rs  mod.rs  setup.rs
goxlr-ipc/src/status/: mod.rs
goxlr-profile/: Cargo.toml
goxlr-profile/src/: default.rs  lib.rs
goxlr-shared/: Cargo.toml  README.md
goxlr-shared/src/: buttons.rs  channels.rs  colours.rs  compressor.rs  device.rs  encoders.rs  eq_frequencies.rs  faders.rs  gate.rs  interaction.rs  lib.rs  microphone.rs  mute.rs  routing.rs  scribbles.rs  states.rs  submix.rs  version.rs
goxlr-shared/src/channels/: channel.rs  channels.rs  fader.rs  input.rs  mod.rs  mute.rs  output.rs  sub_mix.rs  volume.rs
goxlr-usb/: Cargo.toml  README.md
goxlr-usb-messaging/: Cargo.toml
goxlr-usb-messaging/src/: lib.rs  requests.rs
goxlr-usb-messaging/src/common/: command_handler.rs  executor.rs  mod.rs
goxlr-usb-messaging/src/events/: commands.rs  mod.rs
goxlr-usb-messaging/src/goxlr/: commands.rs  mod.rs
goxlr-usb-messaging/src/handlers/: state_tracker.rs
goxlr-usb-messaging/src/platform/rusb/: device.rs  executor.rs  initialiser.rs  mod.rs
goxlr-usb-messaging/src/runners/: device.rs  mod.rs  pnp.rs
goxlr-usb-messaging/src/types/: README.md  buttons.rs  channels.rs  encoders.rs  mod.rs  routing.rs  states.rs
goxlr-usb/src/: button_state.rs  buttonstate.rs  channels.rs  colours.rs  commands.rs  goxlr_commands.rs  interactions.rs  lib.rs  pnp_base.rs  routing.rs  state_tracker.rs
goxlr-usb/src/common/: command_handler.rs  executor.rs
goxlr-usb/src/events/: commands.rs  interaction.rs
goxlr-usb/src/goxlr/: commands.rs
goxlr-usb/src/handlers/: mod.rs  state_tracker.rs
goxlr-usb/src/platform/: README.md  base.rs  mod.rs
goxlr-usb/src/platform/common/: device.rs  initialiser.rs  mod.rs
goxlr-usb/src/platform/libusb/: device.rs  executor.rs  initialiser.rs  local.rs  mod.rs  pnp.rs
goxlr-usb/src/platform/rusb/: device.rs  executor.rs
goxlr-usb/src/platform/tusb/: device.rs  executor.rs  initialiser.rs  local.rs  mod.rs  pnp.rs  tusbaudio.rs
goxlr-usb/src/platform/unix/: device.rs  device_handler.rs  mod.rs  pnp.rs
goxlr-usb/src/platform/windows/: mod.rs
goxlr-usb/src/runners/: device.rs  pnp.rs
goxlr-usb/src/types/: buttons.rs  channels.rs  colours.rs  encoders.rs  faders.rs  mic_keys.rs  microphone.rs  mod.rs  routing.rs  states.rs  submix.rs
goxlr-webui/: README.md  package-lock.json  package.json
goxlr-webui/src/: App.vue  main.js
goxlr-webui/src/assets/: main.css
goxlr-webui/src/components/: Meter.vue  Pages.vue
goxlr-webui/src/components/card/: IconCard.vue  IconRail.vue
goxlr-webui/src/components/channels/: ChannelColumn.vue  ChannelColumnVolume.vue  ChannelRow.vue  ChannelRowVolume.vue  ChannelVolume.vue  ColourSettings.vue  MuteState.vue  ScribbleImage.vue
goxlr-webui/src/components/inputs/: VerticalRange.vue
goxlr-webui/src/components/slider/: RangeSelector.vue  SliderInput.vue
goxlr-webui/src/goxlr/: sockets.js  store.js  util.js
goxlr-webui/src/router/: index.js
goxlr-webui/src/views/: DeviceSelector.vue  HomePage.vue
profile-test/: Cargo.toml
profile-test/src/: device.rs  main.rs
usb/: Cargo.toml
usb/src/: colours.rs
