[package]
name = "goxlr-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goxlr-profile = { path = "../goxlr-profile" }
goxlr-shared = { path="../goxlr-shared" }
goxlr-usb-messaging = { path= "../goxlr-usb" }

# We'll need our own scribble handler eventually, we can borrow from the util for now..
goxlr-scribbles = { git="https://github.com/GoXLR-on-Linux/goxlr-utility.git", rev="d6a556396c56f756c4bf5c0acec11c554069351f" }

# For handling the Enum Maps and sets inside the profile..
strum = { version = "0.25", features = ["derive"] }
enum-map = { version = "2.5.0", features = ["serde"] }

# For handling button states
enumset = "1.1.2"

# General Serialisation / Deserialisation
serde = "1.0.164"
serde_json = "1.0.99"

# tokio for task management
tokio = { version = "1.27.0", features = ["full"] }

# Anyhow for simply Error Handling..
anyhow = "1.0.70"

# Logging..
simplelog = "0.12.1"
log = "0.4.19"

# Async Trait Support
async-trait = "0.1.72"