[package]
name = "goxlr-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
strum = { version = "0.25", features = ["derive"] }
enum-map = { version = "2.6.0", features = ["serde"] }

# Optional Features
serde = { version = "1.0.177", features = ["derive"], optional = true }
clap = { version = "4.4.2", features = ["derive"], optional = true }